--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+
+  ul {
+    list-style-type: disc;
+    text-align: left;
+    max-width: 80vw;
+  }
 }
 
 .App-logo {
@@ -14,6 +20,16 @@
 }
 
 .App-header {
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-body {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
